small fix for mobile view

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ header {
 }
 #score_num {
     font-size: 30px;
-    padding: 10px;
+    padding: 5px;
     text-align: center;
 }
 
@@ -62,6 +62,7 @@ header {
 .audio_player {
     width: 40%;
     min-width: 350px;
+    margin: 10px;
 }
 .audio-results-wrapper {
     display: grid;
@@ -136,6 +137,7 @@ header {
 .map_container {
     width: 40%;
     min-width: 350px;
+    margin: 10px;
 }
 #map {
     height: 700px;
